
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_family; int sin_port; } ;
struct in_addr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int Winsock_In ;
typedef int WSADATA ;
typedef scalar_t__ SOCKET ;
typedef int SOCKADDR ;


 int AF_INET ;
 scalar_t__ INVALID_SOCKET ;
 int IPPROTO_TCP ;
 int MAKEWORD (int,int) ;
 scalar_t__ SOCKET_ERROR ;
 int SOCK_STREAM ;
 int WSACleanup () ;
 scalar_t__ WSAConnect (scalar_t__,int *,int,int *,int *,int *,int *) ;
 scalar_t__ WSASocket (int ,int ,int ,int *,unsigned int,unsigned int) ;
 int WSAStartup (int ,int *) ;
 struct hostent* gethostbyname (char*) ;
 int htons (short) ;
 int inet_addr (int ) ;
 int inet_ntoa (struct in_addr) ;

SOCKET Conecta(char *Host, short puerto)
{

 WSADATA wsaData;
 SOCKET Winsock;

 struct sockaddr_in Winsock_In;
 struct hostent *Ip;


 WSAStartup(MAKEWORD(2,2), &wsaData);

 Winsock=WSASocket(AF_INET,SOCK_STREAM,IPPROTO_TCP,((void*)0),(unsigned int)((void*)0),(unsigned int)((void*)0));


 if(Winsock==INVALID_SOCKET)
 {

  WSACleanup();
  return -1;
 }


 Ip=gethostbyname(Host);
 Winsock_In.sin_port=htons(puerto);
 Winsock_In.sin_family=AF_INET;
 Winsock_In.sin_addr.s_addr=inet_addr(inet_ntoa(*((struct in_addr *)Ip->h_addr)));


 if(WSAConnect(Winsock,(SOCKADDR*)&Winsock_In,sizeof(Winsock_In),((void*)0),((void*)0),((void*)0),((void*)0))==SOCKET_ERROR)
 {

  WSACleanup();
  return -1;
 }

 return Winsock;
}
